RESOLVED FIXED75200
REGRESSION (r90797): Full screen video HUD cannot be dragged horizontally
https://bugs.webkit.org/show_bug.cgi?id=75200
Summary REGRESSION (r90797): Full screen video HUD cannot be dragged horizontally
mitz
Reported 2011-12-24 19:38:36 PST
To reproduce, navigate to the URL, click the full screen button in the video controls to enter full screen mode, then try to drag the full screen HUD around the screen. The HUD only moves vertically but stays centered. This was caused by <http://trac.webkit.org/r90797>.
Attachments
Patch (6.67 KB, patch)
2012-01-05 14:30 PST, Jer Noble
eric.carlson: review+
webkit.review.bot: commit-queue-
mitz
Comment 1 2011-12-24 19:39:00 PST
Jer Noble
Comment 2 2012-01-05 14:30:44 PST
Eric Carlson
Comment 3 2012-01-05 17:11:38 PST
Comment on attachment 121331 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=121331&action=review r=me, although I would rather you use mediaControlsElement() if possible. > LayoutTests/fullscreen/video-controls-drag.html:19 > + panel = internals.shadowRoot(video).firstChild.firstChild; Ick, why hard code the position of the element in the shadow DOM instead of looking it up by name?
Jer Noble
Comment 4 2012-01-05 18:25:45 PST
(In reply to comment #3) > (From update of attachment 121331 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=121331&action=review > > r=me, although I would rather you use mediaControlsElement() if possible. > > > LayoutTests/fullscreen/video-controls-drag.html:19 > > + panel = internals.shadowRoot(video).firstChild.firstChild; > > Ick, why hard code the position of the element in the shadow DOM instead of looking it up by name? I copied it from an existing test, and discovered mediaControlsElement() in between this patch, and the one for bug #75650. :-D I'll change this to use mediaControlsElement. Thanks!
WebKit Review Bot
Comment 5 2012-01-06 01:18:26 PST
Comment on attachment 121331 [details] Patch Attachment 121331 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/11146268 New failing tests: fullscreen/video-controls-drag.html
Jer Noble
Comment 6 2012-01-06 10:28:53 PST
Note You need to log in before you can comment on or make changes to this bug.